# DartTournamentWebApp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RUST_REBUILD_ANALYSIS.md  WORKFLOW_DIAGRAM.md  dart-tournament-web.service  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  go.mod  go.sum
backend/cmd/: main.go
backend/db/: database.go
backend/internal/structs/: player.go  stats.go
backend/internal/utility/: player.go
frontend/: package-lock.json
k8s/: cert-issuer.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/: lib.rs
src/logic/: final_selection.rs  finals.rs  group_play.rs  mod.rs  setup.rs
src/models/: game.rs  mod.rs  player.rs  tournament.rs
static/: .gitkeep  site-gate-temp.js  tournament-edit-auth.js
templates/: index.html
tests/: group_play.rs
