[package]
name = "dart_tournament_web"
version = "0.1.0"
edition = "2021"
description = "Dart tournament organizer - single binary web app"
authors = []

[dependencies]
# Web server and API
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dates/times
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing
csv = "1"

# Utilities (for tournament logic)
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "web"
path = "src/bin/web.rs"
